# VIO

./: Makefile  README.md
code/aru_core/src/: CMakeLists.txt  README.md
code/aru_core/src/bindings/: CMakeLists.txt
code/aru_core/src/bundle_adjustment/: CMakeLists.txt  README.md
code/aru_core/src/controller/: CMakeLists.txt  package.xml
code/aru_core/src/coral/: CMakeLists.txt  README.md
code/aru_core/src/datatypes/: CMakeLists.txt  CTestTestfile.cmake  Makefile
code/aru_core/src/dimr/: CMakeLists.txt
code/aru_core/src/examples/: CMakeLists.txt  aru_coral_example.cpp  aru_datatype_writer.cpp  aru_depth_example.cpp  aru_dimr_example.cpp  aru_laser_map_example.cpp  aru_map_example.cpp  aru_vo_example.cpp
code/aru_core/src/localisation/: CMakeLists.txt  package.xml
code/aru_core/src/mapping/: CMakeLists.txt  README.md
code/aru_core/src/mesh/: CMakeLists.txt  README.md
code/aru_core/src/pose_optimisation/: CMakeLists.txt
code/aru_core/src/repeat/: CMakeLists.txt
code/aru_core/src/scripts/: HuskyDataHandler.py  main.py  monolithic_viewer.py  python_binding_vs_vo.py  python_depth_estimation.py  python_laser_example.py  python_localisation_example.py  python_mapping_example.py  python_vo_example.py  python_vo_monolithic.py
code/aru_core/src/utilities/: CMakeLists.txt  Makefile  cmake_install.cmake
code/aru_core/src/vo/: CMakeLists.txt
src/: vio.cpp
vio_gt-sam/: CMakeLists.txt
vio_gt-sam/src/: vio.cpp
vio_ros/: CMakeLists.txt  package.xml
vio_ros/include/vio_ros/: Subscriber.hpp
vio_ros/src/: Subscriber.cpp  ros_node_vo.cpp
(+205 files in other folders)
